<resources>
    <string name="app_name">Wine on a Dime</string>
    <string name="navigation_map_title">Map</string>
    <string name="navigation_home_title">Home</string>
    <string name="navigation_search_title">Search</string>
    <string name="navigation_guide_title">Guide</string>
    <string name="navigation_profile_title">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign-Up</string>
    <string name="continue_guest_button_text">Contine As Guest</string>
    <string name="search_hint">Search</string>
    <string name="home_appTitle">Wine on a Dime</string>
    <string name="usernameDoesNotExist">"That username does not exist, please register to continue. "</string>
    <string name="incorrectPassword">Password is incorrect, please try again or \'Continue as Guest\'.</string>
    <string name="usernameExists">That username already exists, please enter a different username to continue.</string>
    <string name="no_data_available">Sorry, we couldn\'t find anything matching your search</string>
    <string name="logout_button_text">Sign Out</string>
    <string name="delete_profile_text">Delete Profile</string>
    <string name="dialogTitle">Filter Options</string>
    <string name="cancelFilter">Cancel</string>
    <string name="saveFilter">Save Filters</string>
    <string name="lessThanMile"><![CDATA[< 1.0 Miles]]></string>
    <string name="lessThanFiveMiles"><![CDATA[< 5.0 Miles]]></string>
    <string name="greaterThanFiveMiles"><![CDATA[> 5.0 Miles]]></string>
</resources>
