<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icons8_search_100"
        android:title="@string/navigation_search_title" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/icons8_map_marker_100"
        android:title="@string/navigation_map_title" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icons8_home_100"
        android:title="@string/navigation_home_title" />
    <item
        android:id="@+id/navigation_guide"
        android:icon="@drawable/icons8_user_manual_100"
        android:title="@string/navigation_guide_title" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icons8_customer_100"
        android:title="@string/navigation_profile_title" />
</menu>